Thên chức năng gửi kết quả và cộng chỉ số, cộng deathpoint khi nghỉ